Fixed help menu misaligned in full screen
Odd behavior when mixing top and margin-top percentages, where half screen shows in center of screen but full screen goes half above viewable screen

--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,7 @@ main{
 
 #help{
   position: absolute;
-  top: 50%;
-  margin-top: -30%;
+  top: 25%;
 
   display: flex;
   flex-direction: column;
